cmake_minimum_required(VERSION 2.8.12)

project( MathGL2-install )
if(WIN32)
	include(GetPrerequisites)

	file(TO_CMAKE_PATH "C:\\Program Files (x86)\\MathGL2\\" mathgl_path)
	file(GLOB_RECURSE exe_list "${mathgl_path}/*.exe")
	set(mgl_all_dep)
	foreach(exe_file ${exe_list})
#		message("${exe_file}")
		get_prerequisites("${exe_file}" DEPENDENCIES 1 1 "" "${mathgl_path}/bin")
		foreach(DEPENDENCY_FILE ${DEPENDENCIES})
			gp_resolve_item("${exe_file}" "${DEPENDENCY_FILE}" "" "${mathgl_path}/bin" resolved_file)
#			message("resolved_file='${resolved_file}'")
			if(NOT resolved_file MATCHES ".*libmgl.*")
				list(APPEND mgl_all_dep ${resolved_file})
			endif(NOT resolved_file MATCHES ".*libmgl.*")
		endforeach(DEPENDENCY_FILE ${DEPENDENCIES})
	endforeach(exe_file ${exe_list})
#	list(FILTER mgl_all_dep EXCLUDE REGEX ".+libmgl.+")
	list(REMOVE_DUPLICATES mgl_all_dep)
	list(SORT mgl_all_dep)
	foreach(dll_file ${mgl_all_dep})
		message("${dll_file}")
	endforeach(dll_file ${mgl_all_dep})
	file(COPY ${mgl_all_dep} DESTINATION "${mathgl_path}/bin")
	find_package(Qt5Gui QUIET)
	get_target_property(_loc Qt5::QWindowsIntegrationPlugin LOCATION)
	file(COPY ${_loc} DESTINATION "${mathgl_path}/bin/plugins/platforms")

endif(WIN32)
