include(GenerateExportHeader)
add_compiler_export_flags()

if(enable-qt4)
	set(CMAKE_AUTOMOC ON)
	set(CMAKE_INCLUDE_CURRENT_DIR ON)
	set(MGL_QT4_FILES ../qt.cpp ../../include/mgl2/qt.h ../../include/mgl2/qmathgl.h)
	mgl_add_lib(qt4 ${MGL_QT4_FILES})
	target_link_libraries(mgl-qt4 mgl ${MGL_QT4_LIBS})
	target_link_libraries(mgl-qt4-static mgl ${MGL_QT4_LIBS})
	if(NOT enable-qt5asqt)
		mgl_add_lib(qt ${MGL_QT4_FILES})
		target_link_libraries(mgl-qt mgl ${MGL_QT4_LIBS})
		target_link_libraries(mgl-qt-static mgl ${MGL_QT4_LIBS})
	endif(NOT enable-qt5asqt)

	if(MGL_HAVE_FLTK AND NOT enable-qt5)
		mgl_add_lib(wnd ${MGL_QT4_FILES} ../fltk.cpp ../../include/mgl2/fltk.h)
		target_include_directories(mgl-wnd SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_include_directories(mgl-wnd-static SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_link_libraries(mgl-wnd mgl ${FLTK_LIBRARIES} ${MGL_QT4_LIBS})
		target_link_libraries(mgl-wnd-static mgl ${FLTK_LIBRARIES} ${MGL_QT4_LIBS})
	endif(MGL_HAVE_FLTK AND  NOT enable-qt5)
endif(enable-qt4)
