include(GenerateExportHeader)

if(enable-qt5)
	include(../../cmake-qt5.txt)
	set(MGL_QT5_FILES ../qt.cpp ../../include/mgl2/qt.h ../../include/mgl2/qmathgl.h)
	mgl_add_lib(qt5 ${MGL_QT5_FILES})
	qt5_use_modules(mgl-qt5 ${MGL_QT5_LIBS})
	qt5_use_modules(mgl-qt5-static ${MGL_QT5_LIBS})
	target_link_libraries(mgl-qt5 mgl)
	target_link_libraries(mgl-qt5-static mgl-static)
	if(enable-qt5asqt)
		mgl_add_lib(qt ${MGL_QT5_FILES})
		qt5_use_modules(mgl-qt ${MGL_QT5_LIBS})
		qt5_use_modules(mgl-qt-static ${MGL_QT5_LIBS})
		target_link_libraries(mgl-qt mgl)
		target_link_libraries(mgl-qt-static mgl-static)
	endif(enable-qt5asqt)
	if(MGL_HAVE_FLTK)
		mgl_add_lib(wnd ${MGL_QT5_FILES} ../fltk.cpp ../../include/mgl2/fltk.h)
		target_include_directories(mgl-wnd SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		target_include_directories(mgl-wnd-static SYSTEM PUBLIC ${FLTK_INCLUDE_DIR})
		qt5_use_modules(mgl-wnd ${MGL_QT5_LIBS})
		qt5_use_modules(mgl-wnd-static ${MGL_QT5_LIBS})
		target_link_libraries(mgl-wnd mgl ${FLTK_LIBRARIES})
		target_link_libraries(mgl-wnd-static mgl-static ${FLTK_LIBRARIES})
	endif(MGL_HAVE_FLTK)
endif(enable-qt5)
